--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   mysql1: ^0.19.2
   cupertino_icons: ^1.0.2
+  image_picker: ^0.8.5
 
 dev_dependencies:
   flutter_test:
