--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^1.0.0
-
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/image/
 
 fonts:
   - family: Noto_Sans_KR
