--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   table_calendar: ^3.0.5
   flutter_speed_dial: ^5.1.0
   numberpicker: ^2.1.1
+  http: ^0.13.4
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
