--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   numberpicker: ^2.1.1
   http: ^0.13.4
   dio: ^4.0.6
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
