--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^0.13.4
   dio: ^4.0.6
   step_progress_indicator: ^1.0.2
+  loading_overlay: ^0.2.1
 
 dev_dependencies:
   flutter_test:
