--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   numberpicker: ^2.1.1
   http: ^0.13.4
   dio: ^4.0.6
+  ntp: ^2.0.0
   step_progress_indicator: ^1.0.2
   loading_overlay: ^0.3.0
 
