feat: apply singleton to DB connection
1. DB 커넥션 싱글톤 적용
 - DB 커넥션이 비정상적으로 많아지는 문제 해결
 - Connection 객체를 싱글톤 객체로 바꿈

2. 메인화면 식단 List DB 연동
 - 식단 List 를 DB에 연결하여 정보 가져옴
 - 추후 캘린더와 연동하여 선택한 날짜의 것만 보여줄 예정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   ntp: ^2.0.0
   step_progress_indicator: ^1.0.2
   loading_overlay: ^0.3.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
