--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   step_progress_indicator: ^1.0.2
   loading_overlay: ^0.3.0
   intl: ^0.17.0
+  syncfusion_flutter_charts: ^20.1.58+1
 
 dev_dependencies:
   flutter_test:
