--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   loading_overlay: ^0.3.0
   intl: ^0.17.0
   syncfusion_flutter_charts: 19.4.55
+  flutter_easyloading:
+    git:
+      url: https://github.com/berkanaslan/flutter_easyloading
+      ref: feature/#111-blur-mask-type
 
 dev_dependencies:
   flutter_test:
