--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   loading_overlay: ^0.3.0
   intl: ^0.17.0
   syncfusion_flutter_charts: 19.4.55
+  multi_charts: ^0.3.0
   flutter_easyloading:
     git:
       url: https://github.com/berkanaslan/flutter_easyloading
