--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   multi_charts: ^0.3.0
   async: 2.8.2
   flutter_picker: ^2.0.5
+  image: 3.1.3
   flutter_easyloading:
     git:
       url: https://github.com/berkanaslan/flutter_easyloading
