--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     git:
       url: https://github.com/berkanaslan/flutter_easyloading
       ref: feature/#111-blur-mask-type
+  adaptive_action_sheet: ^2.0.0
 
 dev_dependencies:
   flutter_test:
