feat: predict result
1. 측졍결과 페이지 작업
 - 인식된 음식 컴포넌트 UI 수정
 - flex 활용해 table, phone 에 모두 대응하도록 설계

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
       url: https://github.com/berkanaslan/flutter_easyloading
       ref: feature/#111-blur-mask-type
   adaptive_action_sheet: ^2.0.0
+  marquee_widget: ^1.2.0
 
 dev_dependencies:
   flutter_test:
